# LINMA2710-Scientific-Computing

./: .gitignore  README.md
helloworld/: bisgpt  bisgpt.cpp  classes  doublefunc  doublefunc.cpp  func  function.cpp  hello  hello.cpp  hello_clang  matrix  matrix.cpp  newton  newton.cpp  simpson  simpson.cpp  test  test_classes.cpp  vector  vector.cpp
hw1/codes/: AbstractVector.cpp  AbstractVector.hpp  Makefile  SparseMatrix.cpp  SparseMatrix.hpp  SparseVector.cpp  SparseVector.hpp  test  test.cpp
hw1_2022/codes-20220515/: SparseMatrix.hpp  SparseVector.hpp  Vector.cpp  Vector.hpp  test.cpp
hw2/armadillo-12.0.1/: README.md
hw2/codes/: Makefile  README  convergence_analysis.py  main.cpp  sol.txt  solver.cpp  solver.hpp  visualization.py
hw2/codes/convergence_analysis_sol/: sol_conan0.txt  sol_conan1.txt  sol_conan2.txt  sol_conan3.txt  sol_conan4.txt
hw2/fadeRelease_v2.04/: readme.txt
hw2/fadeRelease_v2.04/examples_25D/: Makefile  a_terrain.cpp  e_cutAndFill.cpp
hw2/fadeRelease_v2.04/examples_2D/: Makefile  ex12_voronoi.cpp  ex1_benchmark.cpp  ex7_quality_meshing.cpp
hw2/fadeRelease_v2.04/include_fade25d/: Bbox2.h  CAF_Component.h  CloudPrepare.h  Color.h  CutAndFill.h  EfficientModel.h  FadeExport.h  Fade_2D.h  IsoContours.h  MeshGenParams.h  SegmentChecker.h  VertexPair2.h  Visualizer3.h  common.h  freeFunctions.h
hw2/fadeRelease_v2.04/iosTest/: CMakeLists.txt  HOWTO.txt  ios.toolchain.cmake
hw3/: viz.py
hw3/codes/: DistributedMatrix.cpp  DistributedMatrix.hpp  Makefile  SubMatrix.cpp  SubMatrix.hpp  main.cpp  poisson.cpp  poisson.hpp  test.cpp  utils.cpp  utils.hpp
(+8 files in other folders)
